WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
303870
REGRESSION(
304015@main
): Broke CLoop tests
https://bugs.webkit.org/show_bug.cgi?id=303870
Summary
REGRESSION(304015@main): Broke CLoop tests
Jonathan Bedard
Reported
2025-12-09 12:48:34 PST
Build:
https://build.webkit.org/#/builders/1696/builds/1654
Log: ASSERTION FAILED: m_thread.ptr() == &Thread::currentSingleton() /Volumes/Data/worker/Apple-Tahoe-LLINT-CLoop-BuildAndTest/build/WebKitBuild/Debug/usr/local/include/wtf/SingleThreadIntegralWrapper.h(54) : void WTF::SingleThreadIntegralWrapper<unsigned int>::assertThread() const [IntegralType = unsigned int] 1 0x1057943b0 WTF::SingleThreadIntegralWrapper<unsigned int>::assertThread() const 2 0x105e06a3c WTF::SingleThreadIntegralWrapper<unsigned int>::operator++() 3 0x105e06a14 WTF::CanMakeCheckedPtrBase<WTF::SingleThreadIntegralWrapper<unsigned int>, unsigned int, bool, (WTF::CheckedPtrDeleteCheckException)0>::incrementCheckedPtrCount() const 4 0x105dfaedc Inspector::JSGlobalObjectInspectorController::incrementCheckedPtrCount() const 5 0x1062caf74 WTF::CheckedRef<Inspector::JSGlobalObjectInspectorController, WTF::RawPtrTraits<Inspector::JSGlobalObjectInspectorController>>::CheckedRef(Inspector::JSGlobalObjectInspectorController&) 6 0x1062548c4 WTF::CheckedRef<Inspector::JSGlobalObjectInspectorController, WTF::RawPtrTraits<Inspector::JSGlobalObjectInspectorController>>::CheckedRef(Inspector::JSGlobalObjectInspectorController&) 7 0x106234c7c JSC::JSGlobalObject::checkedInspectorController() const 8 0x1062344fc JSC::JSGlobalObject::~JSGlobalObject() 9 0x106234f74 JSC::JSGlobalObject::~JSGlobalObject() 10 0x106231954 JSC::JSGlobalObject::destroy(JSC::JSCell*) 11 0x105c5d5a8 JSC::IsoHeapCellType::destroy(JSC::VM&, JSC::JSCell*) const 12 0x105cd0e90 JSC::Subspace::destroy(JSC::VM&, JSC::JSCell*) 13 0x105c74c3c JSC::PreciseAllocation::sweep() 14 0x105c746b4 JSC::PreciseAllocation::lastChanceToFinalize() 15 0x105c745ec JSC::MarkedSpace::lastChanceToFinalize() 16 0x105bb3840 JSC::Heap::lastChanceToFinalize() 17 0x1067956e8 JSC::VM::~VM() 18 0x1067964bc JSC::VM::~VM() 19 0x1057a6ae4 WTF::ThreadSafeRefCountedWithSuppressingSaferCPPChecking<JSC::VM, (WTF::DestructionThread)0>::derefSuppressingSaferCPPChecking() const 20 0x1057a6a6c WTF::DefaultRefDerefTraits<JSC::VM>::derefIfNotNull(JSC::VM*) 21 0x105deb7c0 WTF::RefPtr<JSC::VM, WTF::RawPtrTraits<JSC::VM>, WTF::DefaultRefDerefTraits<JSC::VM>>::operator=(std::nullptr_t) 22 0x1062d731c JSC::JSLockHolder::~JSLockHolder() 23 0x1062d73c0 JSC::JSLockHolder::~JSLockHolder() 24 0x10584d118 JSContextGroupRelease 25 0x105786cc4 -[JSVirtualMachine dealloc] 26 0x182cdbc74 AutoreleasePoolPage::releaseUntil(objc_object**) 27 0x182cd8140 objc_autoreleasePoolPop 28 0x182d0ce88 objc_tls_direct_base<AutoreleasePoolPage*, (tls_key)3, AutoreleasePoolPage::HotPageDealloc>::dtor_(void*) 29 0x1831166a4 _pthread_tsd_cleanup 30 0x1831192e8 _pthread_exit 31 0x183118c14 _pthread_start testapi completed with rc=5 (254)
Attachments
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2025-12-09 12:49:02 PST
<
rdar://problem/166167124
>
Basuke Suzuki
Comment 2
2025-12-10 16:55:19 PST
Pull request:
https://github.com/WebKit/WebKit/pull/55211
EWS
Comment 3
2025-12-10 19:11:53 PST
Committed
304274@main
(cc456a2f26f6): <
https://commits.webkit.org/304274@main
> Reviewed commits have been landed. Closing PR #55211 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug