[Inspector] JSGlobalObjectInspectorController should use thread-safe CheckedPtr to avoid destruction assertions. https://bugs.webkit.org/show_bug.cgi?id=303870 rdar://166167124

Reviewed by Chris Dumez.

During JSGlobalObject destruction, the checkedInspectorController() method creates
CheckedRef instances that may be called from different threads during garbage
collection. This causes SingleThreadIntegralWrapper assertions to fail when the
reference counting operations occur on a thread different from where the
inspector controller was originally created.

Fix by changing JSGlobalObjectInspectorController to inherit from
CanMakeThreadSafeCheckedPtr instead of CanMakeCheckedPtr, which uses atomic
operations for reference counting instead of thread-specific assertions.

Tests: Covered by testapi.

* Source/JavaScriptCore/inspector/JSGlobalObjectInspectorController.h:

Canonical link: https://commits.webkit.org/304274@main